# blue

./: .gitignore  Blue  CMakeLists.txt  Makefile  README.md  README_ES.md  blue_alu.cpp  blue_extern_decl.cpp  blue_file.cpp  blue_interpreter.cpp  blue_ops.cpp  main.cpp
examples/: Bluetest1.cor
include/: blue_alu.h  blue_file.h  blue_interpreter.h  blue_machine.h  blue_map.h  blue_ops.h  blue_state.h  blue_structures.h  blue_util.h
